--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-logging.config=classpath:log4j2.xml
+##启动项目环境变量
+spring.profiles.active=dev
+sso.client.domain=saveWorld
+## 系统设置
+## 是否开启图标
+spring.mvc.favicon.enabled=true
