--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,6 @@ sso.client.domain=saveWorld
 ## 系统设置
 ## 是否开启图标
 spring.mvc.favicon.enabled=true
+spring.thymeleaf.content-type=text/html
+spring.thymeleaf.cache=false
+spring.thymeleaf.mode =LEGACYHTML5
