--- a/pom.xml
+++ b/pom.xml
@@ -25,18 +25,18 @@
 	</properties>
 
 	<dependencies>
-		<!-- 自动添加Tomcat和Spring MVC 的依赖-->
+		<!-- 修改静态资源不用重启-->
 		<!--<dependency>-->
 			<!--<groupId>org.springframework.boot</groupId>-->
-			<!--<artifactId>spring-boot-starter-web</artifactId>-->
-			<!--<exclusions>-->
-				<!--<exclusion>-->
-					<!--<groupId>org.springframework.boot</groupId>-->
-					<!--<artifactId>spring-boot-starter-logging</artifactId>-->
-				<!--</exclusion>-->
-			<!--</exclusions>-->
+			<!--<artifactId>spring-boot-devtools</artifactId>-->
+			<!--<optional>true</optional>-->
+			<!--<scope>true</scope>-->
 		<!--</dependency>-->
-
+		<!--<dependency>-->
+			<!--<groupId>org.springframework</groupId>-->
+			<!--<artifactId>springloaded</artifactId>-->
+			<!--<version>1.2.6.RELEASE</version>-->
+		<!--</dependency>-->
 		<!-- 页面模板引擎-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -54,14 +54,6 @@
 			<artifactId>nekohtml</artifactId>
 			<version>1.9.22</version>
 		</dependency>
-
-		<!-- 引入velocity的依赖包.spring boot 1.5版本以上不支持,需自己带版本引入 -->
-		<!--<dependency>-->
-			<!--<groupId>org.springframework.boot</groupId>-->
-			<!--<artifactId>spring-boot-starter-velocity</artifactId>-->
-			<!--<version>1.2.2.RELEASE</version>-->
-		<!--</dependency>-->
-
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-tomcat</artifactId>
@@ -87,6 +79,7 @@
 			</plugin>
 		</plugins>
 	</build>
+
 
 
 </project>
